samples/_failures_safe/1761563793_c9802d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_273cad62.c: In function ‘main’:
./samples/SAFE/__tmp_273cad62.c:139:9: error: expected expression at end of input
  139 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_273cad62.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_273cad62.c:139:9: error: expected declaration or statement at end of input
